--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 All Thinks Are Possible If You believe
             </h1>
             <p class="header_info">
-                There are many variations of passages of Lorem Ipsumavailable, but the majority have suffered alteration in someform, by injected humour, or randomised words
+                There are many variations of passages of Lorem Ipsumavailable, but the majority have suffered alteration in some form, by injected humour, or randomised words
             </p>
             <div class="primary_btn">
                 <a class="contact_btn" target="_blank" href="#">Contact Us
@@ -33,7 +33,7 @@
                 My failures of <br> previous year
             </h2>
             <p class="fail_description">
-                Contrary to popular belief, Lorem Ipsum is notsimply random text. It has roots in a piece ofclassical Latin literature from 45 BC, making it over2000 years old. Richard McClintock.
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over2000 years old. Richard McClintock.
             </p>
             <ul class="fail_item_list">
                 <li><span>&#10003;</span>Contrary to popular belief, is not simply.</li>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="plan_box">
                     <img class="plans_img" src="images/ecom.png" alt="">
-                    <p class="plans_item_title">ecommerce</p>
+                    <p class="plans_item_title">Ecommerce</p>
                     <p class="plans_item_details">I want to Development</p>
                 </div>
             </div>
